--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,9 @@
 
 # virtual machine crash logPrinters, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-.idea
-/.idea
+
+# config
+/.idea/dictionaries
+/.idea/encodings.xml
+/.idea/uiDesigner.xml
+/.idea/vcs.xml
